--- a/Syncr/sync/templates/sync/jobList.html
+++ b/Syncr/sync/templates/sync/jobList.html
@@ -67,7 +67,7 @@
                     End Time
                 </th>
                 <th scope="col" class="px-6 py-3">
-                    Success
+                    Status
                 </th>
             </tr>
         </thead>
@@ -116,9 +116,14 @@
                     <svg data-slot="icon" aria-hidden="true" fill="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" class="max-w-6 max-h-6 fill-green-200">
                         <path clip-rule="evenodd" d="M12.416 3.376a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.74a.75.75 0 0 1 1.04-.207Z" fill-rule="evenodd"></path>
                     </svg>
-                    {% else %}
+                    {% elif not job.success and job.finished %}
                     <svg data-slot="icon" aria-hidden="true" fill="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" class="max-w-6 max-h-6 fill-red-200">
                         <path d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"></path>
+                    </svg>
+                    {% comment %} job didnt finish yet {% endcomment %}
+                    {% else %}
+                    <svg data-slot="icon" aria-hidden="true" fill="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" class="max-w-6 max-h-6 fill-amber-200">
+                        <path clip-rule="evenodd" d="M13.836 2.477a.75.75 0 0 1 .75.75v3.182a.75.75 0 0 1-.75.75h-3.182a.75.75 0 0 1 0-1.5h1.37l-.84-.841a4.5 4.5 0 0 0-7.08.932.75.75 0 0 1-1.3-.75 6 6 0 0 1 9.44-1.242l.842.84V3.227a.75.75 0 0 1 .75-.75Zm-.911 7.5A.75.75 0 0 1 13.199 11a6 6 0 0 1-9.44 1.241l-.84-.84v1.371a.75.75 0 0 1-1.5 0V9.591a.75.75 0 0 1 .75-.75H5.35a.75.75 0 0 1 0 1.5H3.98l.841.841a4.5 4.5 0 0 0 7.08-.932.75.75 0 0 1 1.025-.273Z" fill-rule="evenodd"></path>
                     </svg>
                     {% endif %}
                 </td>
