--- a/Syncr/sync/templates/sync/scheduleCreate.html
+++ b/Syncr/sync/templates/sync/scheduleCreate.html
@@ -220,9 +220,23 @@
 
     <h1 class="block mt-2 text-xl text-gray-900 dark:text-white mt-8">Advanced Options</h1>
     <p class="block mb-2 text-gray-900 dark:text-gray-300">Flags that can be changed to alter how the job is performed</p>
-    <div id="advanced-options" hx-trigger="changed">
-        <h1 class="block mt-2 text-gray-900 dark:text-white">Please select a job type above</h1>
-    </div> {% comment %} HX field to advanced options {% endcomment %}
+    <div id="accordion-collapse" data-accordion="collapse">
+        <h2 id="accordion-collapse-heading-1">
+            <button type="button" class="flex items-center justify-between w-full p-2 px-5 text-gray-500 rounded-lg aria-expanded:rounded-b-none dark:text-gray-400 hover:bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-800 gap-3 aria-expanded:dark:bg-gray-800 aria-expanded:dark:hover:bg-gray-700" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
+                <span>View Options</span>
+                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                </svg>
+            </button>
+        </h2>
+        <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
+            <div class="p-5 rounded-b-lg dark:bg-gray-700">
+                <div id="advanced-options" hx-trigger="changed">
+                    <h1 class="block mt-2 text-gray-900 dark:text-white">Please select a job type above</h1>
+                </div> {% comment %} HX field to advanced options {% endcomment %}
+            </div>
+        </div>
+    </div>
 
 
     <div class="mt-8">
