--- a/Syncr/sync/templates/sync/scheduleCreate.html
+++ b/Syncr/sync/templates/sync/scheduleCreate.html
@@ -4,7 +4,23 @@
 {% block content %}
 <form action="" method="POST" class="max-w-xl mx-auto">
     {% csrf_token %}
-
+    {% if form.errors %}
+        <div class="text-red-500 bg-red-100 p-2 rounded mb-4">
+            <h2 class="font-bold">Form Errors:</h2>
+            <ul>
+                {% for field, errors in form.errors.items %}
+                    <li>
+                        <strong>{{ field }}:</strong>
+                        <ul>
+                            {% for error in errors %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
     <h1 class="block mt-2 text-xl text-gray-900 dark:text-white">Schedule Type</h1>
     <p class="block mb-2 text-gray-900 dark:text-gray-300">Choose the type of your schedule, this will define what it wil do when triggered by the cron frequency</p>
     <div class="grid grid-cols-3 gap-2">
