--- a/Syncr/sync/templates/sync/unionCreate.html
+++ b/Syncr/sync/templates/sync/unionCreate.html
@@ -3,6 +3,23 @@
 {% block content %}
 <form action="" method="POST" class="max-w-lg mx-auto">
     {% csrf_token %}
+    {% if form.errors %}
+        <div class="text-red-500 bg-red-100 p-2 rounded mb-4">
+            <h2 class="font-bold">Form Errors:</h2>
+            <ul>
+                {% for field, errors in form.errors.items %}
+                    <li>
+                        <strong>{{ field }}:</strong>
+                        <ul>
+                            {% for error in errors %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
     <h1 class="block mt-2 text-xl text-gray-900 dark:text-white">Remotes</h1>
     <p class="block mb-2 text-gray-900 dark:text-gray-300">The remotes that make part of this union</p>
     <div class="grid grid-cols-3 gap-2">
